--- a/Q-municate_app/src/main/res/values/strings.xml
+++ b/Q-municate_app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Q-municate</string>
+    <string name="app_name">Sudo TALK</string>
 
     // ActionBar
     <string name="acb_search_title">Search</string>
